changed stle for the title for another user

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div>
       <h2 id="header">hi im learning git</h2>
-      <p>wanna be better</p>
+      <p>wanna be better than him</p>
     </div>
     <script src="app.js"></script>
   </body>
